Minor fixes for frontend

--- a/frontend/account.html
+++ b/frontend/account.html
@@ -11,13 +11,13 @@
         <header class="header">
             <img class="header__logo" src="https://static.mts.ru/mts_rf/images/category/f/i/promo-apps/logo_mts_services_70x70.svg" alt="Logo"/>
             <h1 class="header__title">BMSTU732</h1>
-            <button class="header__button">Account</button>
+            <a href="account.html" class="header__button"><span>Account</span></a>
         </header>
         <main class="main">
             <section class="menu">
-                <div class="menu__option">Main</div>
-                <div class="menu__option">Manage personal data</div>
-                <div class="menu__option">Manage my lots</div>
+                <a href="index.html" class="menu__option">Main</a>
+                <a href="data.html" class="menu__option">Manage personal data</a>
+                <a class="menu__option">Manage my lots</a>
                 <div class="menu__option menu__option_right">Log out</div>
             </section>
             <section class="cards">
