--- a/frontend/register.html
+++ b/frontend/register.html
@@ -11,7 +11,7 @@
         <header class="header">
             <img class="header__logo" src="https://static.mts.ru/mts_rf/images/category/f/i/promo-apps/logo_mts_services_70x70.svg" alt="Logo" />
             <h1 class="header__title">Register</h1>
-            <button class="header__button">Account</button>
+            <a href="account.html" class="header__button"><span>Account</span></a>
         </header>
         <main class="main">
             <section class="form">
