--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,11 +11,11 @@
         <header class="header">
             <img class="header__logo" src="https://static.mts.ru/mts_rf/images/category/f/i/promo-apps/logo_mts_services_70x70.svg" alt="Logo" />
             <h1 class="header__title">Auction</h1>
-            <button class="header__button">Account</button>
+            <a href="account.html" class="header__button"><span>Account</span></a>
         </header>
         <main class="main">
             <section class="cards">
-                <div class="card">
+                <a class="card">
                     <div class="card__gallery">
                         <div class="card__control card__control_position_left">◄</div>
                         <img class="card__image" src="images/mona-lisa.png" alt="Picture">
@@ -25,7 +25,7 @@
                     <h4 class="card__owner">Leonardo Da Vinci</h4>
                     <p class="card__price">$100M</p>
                     <p class="card__time">21.05.2024</p>
-                </div>
+                </a>
                 <div class="card">
                     <div class="card__gallery">
                         <div class="card__control card__control_position_left">◄</div>
