--- a/frontend/account.html
+++ b/frontend/account.html
@@ -17,7 +17,7 @@
             <section class="menu">
                 <a href="index.html" class="menu__option">Main</a>
                 <a href="data.html" class="menu__option">Manage personal data</a>
-                <a class="menu__option">Manage my lots</a>
+                <a href="personal-lots.html" class="menu__option">Manage my lots</a>
                 <div class="menu__option menu__option_right">Log out</div>
             </section>
             <section class="cards">
@@ -55,7 +55,7 @@
                     <h4 class="card__owner">Leonardo Da Vinci</h4>
                     <p class="card__price">$100M</p>
                     <p class="card__time">21.05.2024</p>
-                    <p class="card__status card__status_last">Your are the last</p>
+                    <p class="card__status card__status_last">You are the last</p>
                 </div>
                 <div class="card">
                     <div class="card__gallery">
@@ -67,7 +67,7 @@
                     <h4 class="card__owner">Leonardo Da Vinci</h4>
                     <p class="card__price">$100M</p>
                     <p class="card__time">21.05.2024</p>
-                    <p class="card__status card__status_last">Your are the last</p>
+                    <p class="card__status card__status_last">You are the last</p>
                 </div>
             </section>
         </main>
