Some very minor changes

--- a/frontend/personal-lots.html
+++ b/frontend/personal-lots.html
@@ -16,7 +16,7 @@
             <section class="menu">
                 <a href="index.html" class="menu__option">Main</a>
                 <a href="data.html" class="menu__option">Manage personal data</a>
-                <a class="menu__option">My account</a>
+                <a href="account.html" class="menu__option">My account</a>
                 <div class="menu__option menu__option_right">Log out</div>
             </section>
             <section class="cards">
