--- a/frontend/register.html
+++ b/frontend/register.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
     <link rel="stylesheet" href="pages/register.css">
+    <script src="js/registration.js"></script>
 </head>
 <body class="body">
     <div class="page">
@@ -46,7 +47,7 @@
                         <input class="registration-form__input" type="password" id="password-confirm" name="password-confirm" required>
                     </div>
                 
-                    <button type="submit" class="registration-form__button">Register</button>
+                    <button type="submit" class="registration-form__button" onclick="registration()">Register</button>
                 </form>
             </section>
         </main>
