Implement fetching cards from server

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,7 +15,18 @@
         </header>
         <main class="main">
             <section class="cards">
-                <a class="card">
+                <a href="lot.html?id=123" class="card">
+                    <div class="card__gallery">
+                        <div class="card__control card__control_position_left">◄</div>
+                        <img class="card__image" src="images/mona-lisa.png" alt="Picture">
+                        <div class="card__control card__control_position_right">►</div>
+                    </div>
+                    <h3 class="card__name">Mona Lisa</h3>
+                    <h4 class="card__owner">Leonardo Da Vinci</h4>
+                    <p class="card__price">$100M</p>
+                    <p class="card__time">21.05.2024</p>
+                </a>
+                <a href="lot.html" class="card">
                     <div class="card__gallery">
                         <div class="card__control card__control_position_left">◄</div>
                         <img class="card__image" src="images/mona-lisa.png" alt="Picture">
@@ -48,41 +59,9 @@
                     <p class="card__price">$100M</p>
                     <p class="card__time">21.05.2024</p>
                 </div>
-                <div class="card">
-                    <div class="card__gallery">
-                        <div class="card__control card__control_position_left">◄</div>
-                        <img class="card__image" src="images/mona-lisa.png" alt="Picture">
-                        <div class="card__control card__control_position_right">►</div>
-                    </div>
-                    <h3 class="card__name">Mona Lisa</h3>
-                    <h4 class="card__owner">Leonardo Da Vinci</h4>
-                    <p class="card__price">$100M</p>
-                    <p class="card__time">21.05.2024</p>
-                </div>
-                <div class="card">
-                    <div class="card__gallery">
-                        <div class="card__control card__control_position_left">◄</div>
-                        <img class="card__image" src="images/mona-lisa.png" alt="Picture">
-                        <div class="card__control card__control_position_right">►</div>
-                    </div>
-                    <h3 class="card__name">Mona Lisa</h3>
-                    <h4 class="card__owner">Leonardo Da Vinci</h4>
-                    <p class="card__price">$100M</p>
-                    <p class="card__time">21.05.2024</p>
-                </div>
-                <div class="card">
-                    <div class="card__gallery">
-                        <div class="card__control card__control_position_left">◄</div>
-                        <img class="card__image" src="images/mona-lisa.png" alt="Picture">
-                        <div class="card__control card__control_position_right">►</div>
-                    </div>
-                    <h3 class="card__name">Mona Lisa</h3>
-                    <h4 class="card__owner">Leonardo Da Vinci</h4>
-                    <p class="card__price">$100M</p>
-                    <p class="card__time">21.05.2024</p>
-                </div>
             </section>
         </main>
     </div>
+    <script src="js/getAllLots.js"></script>
 </body>
 </html>
