integration, initial tests completed

--- a/main-auction-service/src/main/resources/frontend/login.html
+++ b/main-auction-service/src/main/resources/frontend/login.html
@@ -3,14 +3,14 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Log In</title>
-        <link rel="stylesheet" href="../../../../../frontend/pages/login.css">
+        <link rel="stylesheet" href="/pages/login.css">
     </head>
     <body class="body">
         <div class="page">
             <header class="header">
                 <img class="header__logo" src="https://static.mts.ru/mts_rf/images/category/f/i/promo-apps/logo_mts_services_70x70.svg" alt="Logo"/>
                 <h1 class="header__title">Log In</h1>
-                <a href="../../../../../frontend/account.html" class="header__button"><span>Account</span></a>
+                <a href="./account.html" class="header__button"><span>Account</span></a>
             </header>
             <main class="main">
                 <section class="form">
