--- a/main-auction-service/src/main/resources/frontend/lot.html
+++ b/main-auction-service/src/main/resources/frontend/lot.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Personal lots</title>
-    <link rel="stylesheet" href="pages/lot.css">
+    <link rel="stylesheet" href="/pages/lot.css">
 </head>
 <body class="body">
 <div class="page">
@@ -36,6 +36,6 @@
         </section>
     </main>
 </div>
-<script src="js/lot.js"></script>
+<script src="/js/lot.js"></script>
 </body>
 </html>
