--- a/main-auction-service/src/main/resources/frontend/new-lot.html
+++ b/main-auction-service/src/main/resources/frontend/new-lot.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add new lot</title>
-    <link rel="stylesheet" href="pages/new-lot.css">
-    <script src="js/createLot.js"></script>
+    <link rel="stylesheet" href="/pages/new-lot.css">
+    <script src="/js/createLot.js"></script>
 
 </head>
 <body class="body">
@@ -14,7 +14,7 @@
         <img class="header__logo"
              src="https://static.mts.ru/mts_rf/images/category/f/i/promo-apps/logo_mts_services_70x70.svg" alt="Logo"/>
         <h1 class="header__title">Add new lot</h1>
-        <a href="account.html" class="header__button"><span>Account</span></a>
+        <a href="/account" class="header__button"><span>Account</span></a>
     </header>
     <main class="main">
         <section class="form">
