some mistakes have been fixed

--- a/main-auction-service/src/main/resources/frontend/data.html
+++ b/main-auction-service/src/main/resources/frontend/data.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modify personal info</title>
-    <link rel="stylesheet" href="/pages/data.css">
+    <link rel="stylesheet" href="../static/pages/data.css">
 </head>
 <body class="body">
     <div class="page">
         <header class="header">
             <img class="header__logo" src="https://static.mts.ru/mts_rf/images/category/f/i/promo-apps/logo_mts_services_70x70.svg" alt="Logo" />
             <h1 class="header__title">Modify personal info</h1>
-            <a href="/account" class="header__button"><span>Account</span></a>
+            <a href="../frontend/account.html" class="header__button"><span>Account</span></a>
         </header>
         <main class="main">
             <section class="form">
