--- a/main-auction-service/src/main/resources/frontend/register.html
+++ b/main-auction-service/src/main/resources/frontend/register.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
-    <link rel="stylesheet" href="/pages/register.css">
-    <script src="/js/registration.js"></script>
+    <link rel="stylesheet" href="../static/pages/register.css">
+    <script src="../static/js/registration.js"></script>
 </head>
 <body class="body">
     <div class="page">
         <header class="header">
             <img class="header__logo" src="https://static.mts.ru/mts_rf/images/category/f/i/promo-apps/logo_mts_services_70x70.svg" alt="Logo" />
             <h1 class="header__title">Register</h1>
-            <a href="/account" class="header__button"><span>Account</span></a>
+            <a href="../frontend/account.html" class="header__button"><span>Account</span></a>
         </header>
         <main class="main">
             <section class="form">
