--- a/main-auction-service/src/main/resources/frontend/account.html
+++ b/main-auction-service/src/main/resources/frontend/account.html
@@ -4,27 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Account</title>
-    <link rel="stylesheet" href="/pages/account.css">
+    <link rel="stylesheet" href="../static/pages/account.css">
 </head>
 <body class="body">
     <div class="page">
         <header class="header">
             <img class="header__logo" src="https://static.mts.ru/mts_rf/images/category/f/i/promo-apps/logo_mts_services_70x70.svg" alt="Logo"/>
             <h1 class="header__title">BMSTU732</h1>
-            <a href="/account" class="header__button"><span>Account</span></a>
+            <a href="../frontend/account.html" class="header__button"><span>Account</span></a>
         </header>
         <main class="main">
             <section class="menu">
                 <a href="/" class="menu__option">Main</a>
-                <a href="/data" class="menu__option">Manage personal data</a>
-                <a href="/personal-lots" class="menu__option">Manage my lots</a>
+                <a href="../frontend/data.html" class="menu__option">Manage personal data</a>
+                <a href="../frontend/personal-lots.html" class="menu__option">Manage my lots</a>
                 <div class="menu__option menu__option_right">Log out</div>
             </section>
             <section class="cards">
                 <div class="card">
                     <div class="card__gallery">
                         <div class="card__control card__control_position_left">◄</div>
-                        <img class="card__image" src="images/mona-lisa.png" alt="Picture">
+                        <img class="card__image" src="../static/images/mona-lisa.png" alt="Picture">
                         <div class="card__control card__control_position_right">►</div>
                     </div>
                     <h3 class="card__name">Mona Lisa</h3>
@@ -36,7 +36,7 @@
                 <div class="card">
                     <div class="card__gallery">
                         <div class="card__control card__control_position_left">◄</div>
-                        <img class="card__image" src="images/mona-lisa.png" alt="Picture">
+                        <img class="card__image" src="../static/images/mona-lisa.png" alt="Picture">
                         <div class="card__control card__control_position_right">►</div>
                     </div>
                     <h3 class="card__name">Mona Lisa</h3>
@@ -48,7 +48,7 @@
                 <div class="card">
                     <div class="card__gallery">
                         <div class="card__control card__control_position_left">◄</div>
-                        <img class="card__image" src="images/mona-lisa.png" alt="Picture">
+                        <img class="card__image" src="../static/images/mona-lisa.png" alt="Picture">
                         <div class="card__control card__control_position_right">►</div>
                     </div>
                     <h3 class="card__name">Mona Lisa</h3>
@@ -60,7 +60,7 @@
                 <div class="card">
                     <div class="card__gallery">
                         <div class="card__control card__control_position_left">◄</div>
-                        <img class="card__image" src="images/mona-lisa.png" alt="Picture">
+                        <img class="card__image" src="../static/images/mona-lisa.png" alt="Picture">
                         <div class="card__control card__control_position_right">►</div>
                     </div>
                     <h3 class="card__name">Mona Lisa</h3>
