--- a/main-auction-service/src/main/resources/frontend/index.html
+++ b/main-auction-service/src/main/resources/frontend/index.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Auction</title>
-    <link rel="stylesheet" href="/pages/index.css">
+    <link rel="stylesheet" href="../static/pages/index.css">
 </head>
 <body class="body">
     <div class="page">
         <header class="header">
             <img class="header__logo" src="https://static.mts.ru/mts_rf/images/category/f/i/promo-apps/logo_mts_services_70x70.svg" alt="Logo" />
             <h1 class="header__title">Auction</h1>
-            <a href="/account" class="header__button"><span>Account</span></a>
+            <a href="../frontend/account.html" class="header__button"><span>Account</span></a>
         </header>
         <main class="main">
             <section class="cards">
-                <a href="/lot?id=123" class="card">
+                <a href="../frontend/lot.html?id=123" class="card">
                     <div class="card__gallery">
                         <div class="card__control card__control_position_left">◄</div>
-                        <img class="card__image" src="images/mona-lisa.png" alt="Picture">
+                        <img class="card__image" src="../static/images/mona-lisa.png" alt="Picture">
                         <div class="card__control card__control_position_right">►</div>
                     </div>
                     <h3 class="card__name">Mona Lisa</h3>
@@ -26,10 +26,10 @@
                     <p class="card__price">$100M</p>
                     <p class="card__time">21.05.2024</p>
                 </a>
-                <a href="/lot" class="card">
+                <a href="../frontend/lot.html" class="card">
                     <div class="card__gallery">
                         <div class="card__control card__control_position_left">◄</div>
-                        <img class="card__image" src="images/mona-lisa.png" alt="Picture">
+                        <img class="card__image" src="../static/images/mona-lisa.png" alt="Picture">
                         <div class="card__control card__control_position_right">►</div>
                     </div>
                     <h3 class="card__name">Mona Lisa</h3>
@@ -40,7 +40,7 @@
                 <div class="card">
                     <div class="card__gallery">
                         <div class="card__control card__control_position_left">◄</div>
-                        <img class="card__image" src="images/mona-lisa.png" alt="Picture">
+                        <img class="card__image" src="../static/images/mona-lisa.png" alt="Picture">
                         <div class="card__control card__control_position_right">►</div>
                     </div>
                     <h3 class="card__name">Mona Lisa</h3>
@@ -51,7 +51,7 @@
                 <div class="card">
                     <div class="card__gallery">
                         <div class="card__control card__control_position_left">◄</div>
-                        <img class="card__image" src="images/mona-lisa.png" alt="Picture">
+                        <img class="card__image" src="../static/images/mona-lisa.png" alt="Picture">
                         <div class="card__control card__control_position_right">►</div>
                     </div>
                     <h3 class="card__name">Mona Lisa</h3>
@@ -62,6 +62,6 @@
             </section>
         </main>
     </div>
-    <script src="./js/getAllLots.js"></script>
+    <script src="../static/js/getAllLots.js"></script>
 </body>
 </html>
