--- a/main-auction-service/src/main/resources/frontend/lot.html
+++ b/main-auction-service/src/main/resources/frontend/lot.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Personal lots</title>
-    <link rel="stylesheet" href="/pages/lot.css">
+    <link rel="stylesheet" href="../static/pages/lot.css">
 </head>
 <body class="body">
 <div class="page">
@@ -16,7 +16,7 @@
         <section class="description">
             <div class="description__gallery">
                 <div class="description__control description__control_position_left"><span>◄</span></div>
-                <img class="description__image" src="images/mona-lisa.png" alt="Picture">
+                <img class="description__image" src="../static/images/mona-lisa.png" alt="Picture">
                 <div class="description__control description__control_position_right"><span>►</span></div>
             </div>
             <div class="description__content">
@@ -31,11 +31,11 @@
                     <label for="bet-value" class="registration-form__label">New bet:</label>
                     <input class="registration-form__input" type="text" id="bet-value" name="bet-value" required>
                 </div>
-                <button type="submit" class="registration-form__button">Make bet</button>
+                <button type="submit" class="registration-form__button" onclick="makeBet()">Make bet</button>
             </form>
         </section>
     </main>
 </div>
-<script src="/js/lot.js"></script>
+<script src="../static/js/lot.js"></script>
 </body>
 </html>
