--- a/main-auction-service/src/main/resources/frontend/personal-lots.html
+++ b/main-auction-service/src/main/resources/frontend/personal-lots.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Personal lots</title>
-    <link rel="stylesheet" href="/pages/personal-lots.css">
+    <link rel="stylesheet" href="../static/pages/personal-lots.css">
 </head>
 <body class="body">
     <div class="page">
         <header class="header">
             <img class="header__logo" src="https://static.mts.ru/mts_rf/images/category/f/i/promo-apps/logo_mts_services_70x70.svg" alt="Logo"/>
             <h1 class="header__title">Manage personal lots</h1>
-            <a href="/account" class="header__button"><span>Account</span></a>
+            <a href="../frontend/account.html" class="header__button"><span>Account</span></a>
         </header>
         <main class="main">
             <section class="menu">
-                <a href="/index" class="menu__option">Main</a>
-                <a href="/data" class="menu__option">Manage personal data</a>
-                <a href="/account" class="menu__option">My account</a>
+                <a href="../frontend/index.html" class="menu__option">Main</a>
+                <a href="../frontend/data.html" class="menu__option">Manage personal data</a>
+                <a href="../frontend/account.html" class="menu__option">My account</a>
                 <div class="menu__option menu__option_right">Log out</div>
             </section>
             <section class="cards">
@@ -30,7 +30,7 @@
                 <div class="card">
                     <div class="card__gallery">
                         <div class="card__control card__control_position_left">◄</div>
-                        <img class="card__image" src="images/mona-lisa.png" alt="Picture">
+                        <img class="card__image" src="../static/images/mona-lisa.png" alt="Picture">
                         <div class="card__control card__control_position_right">►</div>
                     </div>
                     <h3 class="card__name">Mona Lisa</h3>
