Implement getting UserID of authenticated user

--- a/main-auction-service/src/main/resources/frontend/index.html
+++ b/main-auction-service/src/main/resources/frontend/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"
+      th:attr="data-user-id=${id}">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -63,5 +64,6 @@
         </main>
     </div>
     <script src="./js/getAllLots.js"></script>
+    <script src="./js/getUserId.js"></script>
 </body>
 </html>
