--- a/main-auction-service/src/main/resources/frontend/login.html
+++ b/main-auction-service/src/main/resources/frontend/login.html
@@ -10,7 +10,7 @@
             <header class="header">
                 <img class="header__logo" src="https://static.mts.ru/mts_rf/images/category/f/i/promo-apps/logo_mts_services_70x70.svg" alt="Logo"/>
                 <h1 class="header__title">Log In</h1>
-                <a href="./account.html" class="header__button"><span>Account</span></a>
+                <a href="/account" class="header__button"><span>Account</span></a>
             </header>
             <main class="main">
                 <section class="form">
