--- a/main-auction-service/src/main/resources/frontend/account.html
+++ b/main-auction-service/src/main/resources/frontend/account.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Account</title>
-    <link rel="stylesheet" href="../static/pages/account.css">
+    <link rel="stylesheet" href="/pages/account.css">
 </head>
 <body class="body">
     <div class="page">
@@ -24,7 +24,7 @@
                 <div class="card">
                     <div class="card__gallery">
                         <div class="card__control card__control_position_left">◄</div>
-                        <img class="card__image" src="../static/images/mona-lisa.png" alt="Picture">
+                        <img class="card__image" src="/images/mona-lisa.png" alt="Picture">
                         <div class="card__control card__control_position_right">►</div>
                     </div>
                     <h3 class="card__name">Mona Lisa</h3>
@@ -36,7 +36,7 @@
                 <div class="card">
                     <div class="card__gallery">
                         <div class="card__control card__control_position_left">◄</div>
-                        <img class="card__image" src="../static/images/mona-lisa.png" alt="Picture">
+                        <img class="card__image" src="/images/mona-lisa.png" alt="Picture">
                         <div class="card__control card__control_position_right">►</div>
                     </div>
                     <h3 class="card__name">Mona Lisa</h3>
@@ -48,7 +48,7 @@
                 <div class="card">
                     <div class="card__gallery">
                         <div class="card__control card__control_position_left">◄</div>
-                        <img class="card__image" src="../static/images/mona-lisa.png" alt="Picture">
+                        <img class="card__image" src="/images/mona-lisa.png" alt="Picture">
                         <div class="card__control card__control_position_right">►</div>
                     </div>
                     <h3 class="card__name">Mona Lisa</h3>
@@ -60,7 +60,7 @@
                 <div class="card">
                     <div class="card__gallery">
                         <div class="card__control card__control_position_left">◄</div>
-                        <img class="card__image" src="../static/images/mona-lisa.png" alt="Picture">
+                        <img class="card__image" src="/images/mona-lisa.png" alt="Picture">
                         <div class="card__control card__control_position_right">►</div>
                     </div>
                     <h3 class="card__name">Mona Lisa</h3>
