--- a/main-auction-service/src/main/resources/frontend/data.html
+++ b/main-auction-service/src/main/resources/frontend/data.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modify personal info</title>
-    <link rel="stylesheet" href="../static/pages/data.css">
+    <link rel="stylesheet" href="/pages/data.css">
 </head>
 <body class="body">
     <div class="page">
