--- a/main-auction-service/src/main/resources/frontend/new-lot.html
+++ b/main-auction-service/src/main/resources/frontend/new-lot.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add new lot</title>
-    <link rel="stylesheet" href="../static/pages/new-lot.css">
-    <script src="../static/js/createLot.js"></script>
+    <link rel="stylesheet" href="/pages/new-lot.css">
+    <script src="/js/createLot.js"></script>
 
 </head>
 <body class="body">
