--- a/main-auction-service/src/main/resources/frontend/personal-lots.html
+++ b/main-auction-service/src/main/resources/frontend/personal-lots.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Personal lots</title>
-    <link rel="stylesheet" href="../static/pages/personal-lots.css">
+    <link rel="stylesheet" href="/pages/personal-lots.css">
 </head>
 <body class="body">
     <div class="page">
@@ -30,7 +30,7 @@
                 <div class="card">
                     <div class="card__gallery">
                         <div class="card__control card__control_position_left">◄</div>
-                        <img class="card__image" src="../static/images/mona-lisa.png" alt="Picture">
+                        <img class="card__image" src="/images/mona-lisa.png" alt="Picture">
                         <div class="card__control card__control_position_right">►</div>
                     </div>
                     <h3 class="card__name">Mona Lisa</h3>
