--- a/main-auction-service/src/main/resources/frontend/register.html
+++ b/main-auction-service/src/main/resources/frontend/register.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
-    <link rel="stylesheet" href="../static/pages/register.css">
-    <script src="../static/js/registration.js"></script>
+    <link rel="stylesheet" href="/pages/register.css">
+    <script src="/js/registration.js"></script>
 </head>
 <body class="body">
     <div class="page">
