--- a/main-auction-service/src/main/resources/frontend/login.html
+++ b/main-auction-service/src/main/resources/frontend/login.html
@@ -3,7 +3,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Log In</title>
-        <link rel="stylesheet" href="../static/pages/login.css">
+        <link rel="stylesheet" href="/pages/login.css">
     </head>
     <body class="body">
         <div class="page">
