Fix other links

--- a/main-auction-service/src/main/resources/frontend/account.html
+++ b/main-auction-service/src/main/resources/frontend/account.html
@@ -11,13 +11,13 @@
         <header class="header">
             <img class="header__logo" src="https://static.mts.ru/mts_rf/images/category/f/i/promo-apps/logo_mts_services_70x70.svg" alt="Logo"/>
             <h1 class="header__title">BMSTU732</h1>
-            <a href="../frontend/account.html" class="header__button"><span>Account</span></a>
+            <a href="/account" class="header__button"><span>Account</span></a>
         </header>
         <main class="main">
             <section class="menu">
                 <a href="/" class="menu__option">Main</a>
-                <a href="../frontend/data.html" class="menu__option">Manage personal data</a>
-                <a href="../frontend/personal-lots.html" class="menu__option">Manage my lots</a>
+                <a href="/data" class="menu__option">Manage personal data</a>
+                <a href="/personal-lots" class="menu__option">Manage my lots</a>
                 <div class="menu__option menu__option_right">Log out</div>
             </section>
             <section class="cards">
