--- a/main-auction-service/src/main/resources/frontend/new-lot.html
+++ b/main-auction-service/src/main/resources/frontend/new-lot.html
@@ -14,7 +14,7 @@
         <img class="header__logo"
              src="https://static.mts.ru/mts_rf/images/category/f/i/promo-apps/logo_mts_services_70x70.svg" alt="Logo"/>
         <h1 class="header__title">Add new lot</h1>
-        <a href="../frontend/account.html" class="header__button"><span>Account</span></a>
+        <a href="/account" class="header__button"><span>Account</span></a>
     </header>
     <main class="main">
         <section class="form">
