--- a/main-auction-service/src/main/resources/frontend/personal-lots.html
+++ b/main-auction-service/src/main/resources/frontend/personal-lots.html
@@ -20,13 +20,13 @@
                 <div class="menu__option menu__option_right">Log out</div>
             </section>
             <section class="cards">
-                <div class="card">
+                <a href="/new-lot" class="card">
                     <div class="card__gallery">
                         <div class="card__control card__control_position_fill"><span>+</span></div>
 <!--                        <img class="card__image" src="images/mona-lisa.png" alt="Picture">-->
                     </div>
                     <h3 class="card__name">New lot</h3>
-                </div>
+                </a>
                 <div class="card">
                     <div class="card__gallery">
                         <div class="card__control card__control_position_left">◄</div>
