--- a/main-auction-service/src/main/resources/frontend/new-lot.html
+++ b/main-auction-service/src/main/resources/frontend/new-lot.html
@@ -38,12 +38,12 @@
 
                 <div class="registration-form__field">
                     <label for="initialPrice" class="registration-form__label">Initial price:</label>
-                    <input class="registration-form__input" type="text" id="initialPrice" name="initialPrice" required>
+                    <input class="registration-form__input" type="text" id="initialPrice" name="initialPrice" placeholder="Enter a number separated by a dot, for example: 123.456" required>
                 </div>
 
                 <div class="registration-form__field">
                     <label for="increasePrice" class="registration-form__label">Minimal increase price:</label>
-                    <input class="registration-form__input" type="text" id="increasePrice" name="increasePrice" required>
+                    <input class="registration-form__input" type="text" id="increasePrice" name="increasePrice" placeholder="Enter a number separated by a dot, for example: 123.456" required>
                 </div>
 
                 <div class="registration-form__field">
