--- a/main-auction-service/src/main/resources/frontend/account.html
+++ b/main-auction-service/src/main/resources/frontend/account.html
@@ -19,6 +19,7 @@
                 <a href="/data" class="menu__option">Manage personal data</a>
                 <a href="/personal-lots" class="menu__option">Manage my lots</a>
                 <div class="menu__option menu__option_right">Log out</div>
+                <a href="/balance" class="menu__option">Top up balance</a>
             </section>
             <section class="cards">
                 <div class="card">
