add controller, redact refill

--- a/main-auction-service/src/main/resources/frontend/lot.html
+++ b/main-auction-service/src/main/resources/frontend/lot.html
@@ -37,5 +37,8 @@
     </main>
 </div>
 <script src="/js/lot.js"></script>
+<script src="/js/getUserId.js"></script>
+<script src="/js/makeBet.js"></script>
+
 </body>
 </html>
