Alter card gallery controls behavor

--- a/main-auction-service/src/main/resources/frontend/index.html
+++ b/main-auction-service/src/main/resources/frontend/index.html
@@ -30,7 +30,8 @@
             </section>
         </main>
     </div>
-    <script src="./js/getAllLots.js"></script>
-    <script src="./js/getUserId.js"></script>
+    <script src="/js/getAllLots.js"></script>
+    <script src="/js/getUserId.js"></script>
+    <script src="/js/preventDefault.js"></script>
 </body>
 </html>
