Implement user account js

--- a/main-auction-service/src/main/resources/frontend/account.html
+++ b/main-auction-service/src/main/resources/frontend/account.html
@@ -32,7 +32,7 @@
                     <h4 class="card__owner">Leonardo Da Vinci</h4>
                     <p class="card__price">$100M</p>
                     <p class="card__time">21.05.2024</p>
-                    <p class="card__status card__status_payment">Awayting payment</p>
+                    <p class="card__status card__status_payment">Awaiting payment</p>
                 </div>
                 <div class="card">
                     <div class="card__gallery">
@@ -58,20 +58,11 @@
                     <p class="card__time">21.05.2024</p>
                     <p class="card__status card__status_last">You are the last</p>
                 </div>
-                <div class="card">
-                    <div class="card__gallery">
-                        <div class="card__control card__control_position_left">◄</div>
-                        <img class="card__image" src="/images/mona-lisa.png" alt="Picture">
-                        <div class="card__control card__control_position_right">►</div>
-                    </div>
-                    <h3 class="card__name">Mona Lisa</h3>
-                    <h4 class="card__owner">Leonardo Da Vinci</h4>
-                    <p class="card__price">$100M</p>
-                    <p class="card__time">21.05.2024</p>
-                    <p class="card__status card__status_last">You are the last</p>
-                </div>
             </section>
         </main>
     </div>
-</body>
+    <script src="/js/currency.js"></script>
+    <script src="/js/getUserId.js"></script>
+    <script src="/js/account.js"></script>
+    </body>
 </html>
