--- a/main-auction-service/src/main/resources/frontend/index.html
+++ b/main-auction-service/src/main/resources/frontend/index.html
@@ -30,6 +30,7 @@
             </section>
         </main>
     </div>
+    <script src="/js/currency.js"></script>
     <script src="/js/getAllLots.js"></script>
     <script src="/js/getUserId.js"></script>
     <script src="/js/preventDefault.js"></script>
