--- a/main-auction-service/src/main/resources/frontend/account.html
+++ b/main-auction-service/src/main/resources/frontend/account.html
@@ -7,71 +7,72 @@
     <link rel="stylesheet" href="/pages/account.css">
 </head>
 <body class="body">
-    <div class="page">
-        <header class="header">
-            <img class="header__logo" src="https://static.mts.ru/mts_rf/images/category/f/i/promo-apps/logo_mts_services_70x70.svg" alt="Logo"/>
-            <h1 class="header__title">BMSTU732</h1>
-            <a href="/account" class="header__button"><span>Account</span></a>
-        </header>
-        <main class="main">
-            <section class="menu">
-                <a href="/" class="menu__option">Main</a>
-                <a href="/data" class="menu__option">Manage personal data</a>
-                <a href="/personal-lots" class="menu__option">Manage my lots</a>
-                <div class="menu__option menu__option_right">Log out</div>
-                <a href="/balance" class="menu__option">Top up balance</a>
-            </section>
-            <section class="cards">
-                <div class="card">
-                    <div class="card__gallery">
-                        <div class="card__control card__control_position_left">◄</div>
-                        <img class="card__image" src="/images/mona-lisa.png" alt="Picture">
-                        <div class="card__control card__control_position_right">►</div>
-                    </div>
-                    <h3 class="card__name">Mona Lisa</h3>
-                    <h4 class="card__owner">Leonardo Da Vinci</h4>
-                    <p class="card__price">$100M</p>
-                    <p class="card__time">21.05.2024</p>
-                    <p class="card__status card__status_payment">Awayting payment</p>
+<div class="page">
+    <header class="header">
+        <img class="header__logo"
+             src="https://static.mts.ru/mts_rf/images/category/f/i/promo-apps/logo_mts_services_70x70.svg" alt="Logo"/>
+        <h1 class="header__title">BMSTU732</h1>
+        <a href="/account" class="header__button"><span>Account</span></a>
+    </header>
+    <main class="main">
+        <section class="menu">
+            <a href="/" class="menu__option">Main</a>
+            <a href="/data" class="menu__option">Manage personal data</a>
+            <a href="/personal-lots" class="menu__option">Manage my lots</a>
+            <div class="menu__option menu__option_right">Log out</div>
+            <a href="/balance" class="menu__option">Top up balance</a>
+        </section>
+        <section class="cards">
+            <div class="card">
+                <div class="card__gallery">
+                    <div class="card__control card__control_position_left">◄</div>
+                    <img class="card__image" src="/images/mona-lisa.png" alt="Picture">
+                    <div class="card__control card__control_position_right">►</div>
                 </div>
-                <div class="card">
-                    <div class="card__gallery">
-                        <div class="card__control card__control_position_left">◄</div>
-                        <img class="card__image" src="/images/mona-lisa.png" alt="Picture">
-                        <div class="card__control card__control_position_right">►</div>
-                    </div>
-                    <h3 class="card__name">Mona Lisa</h3>
-                    <h4 class="card__owner">Leonardo Da Vinci</h4>
-                    <p class="card__price">$100M</p>
-                    <p class="card__time">21.05.2024</p>
-                    <p class="card__status card__status_beaten">Beaten</p>
+                <h3 class="card__name">Mona Lisa</h3>
+                <h4 class="card__owner">Leonardo Da Vinci</h4>
+                <p class="card__price">$100M</p>
+                <p class="card__time">21.05.2024</p>
+                <p class="card__status card__status_payment">Awayting payment</p>
+            </div>
+            <div class="card">
+                <div class="card__gallery">
+                    <div class="card__control card__control_position_left">◄</div>
+                    <img class="card__image" src="/images/mona-lisa.png" alt="Picture">
+                    <div class="card__control card__control_position_right">►</div>
                 </div>
-                <div class="card">
-                    <div class="card__gallery">
-                        <div class="card__control card__control_position_left">◄</div>
-                        <img class="card__image" src="/images/mona-lisa.png" alt="Picture">
-                        <div class="card__control card__control_position_right">►</div>
-                    </div>
-                    <h3 class="card__name">Mona Lisa</h3>
-                    <h4 class="card__owner">Leonardo Da Vinci</h4>
-                    <p class="card__price">$100M</p>
-                    <p class="card__time">21.05.2024</p>
-                    <p class="card__status card__status_last">You are the last</p>
+                <h3 class="card__name">Mona Lisa</h3>
+                <h4 class="card__owner">Leonardo Da Vinci</h4>
+                <p class="card__price">$100M</p>
+                <p class="card__time">21.05.2024</p>
+                <p class="card__status card__status_beaten">Beaten</p>
+            </div>
+            <div class="card">
+                <div class="card__gallery">
+                    <div class="card__control card__control_position_left">◄</div>
+                    <img class="card__image" src="/images/mona-lisa.png" alt="Picture">
+                    <div class="card__control card__control_position_right">►</div>
                 </div>
-                <div class="card">
-                    <div class="card__gallery">
-                        <div class="card__control card__control_position_left">◄</div>
-                        <img class="card__image" src="/images/mona-lisa.png" alt="Picture">
-                        <div class="card__control card__control_position_right">►</div>
-                    </div>
-                    <h3 class="card__name">Mona Lisa</h3>
-                    <h4 class="card__owner">Leonardo Da Vinci</h4>
-                    <p class="card__price">$100M</p>
-                    <p class="card__time">21.05.2024</p>
-                    <p class="card__status card__status_last">You are the last</p>
+                <h3 class="card__name">Mona Lisa</h3>
+                <h4 class="card__owner">Leonardo Da Vinci</h4>
+                <p class="card__price">$100M</p>
+                <p class="card__time">21.05.2024</p>
+                <p class="card__status card__status_last">You are the last</p>
+            </div>
+            <div class="card">
+                <div class="card__gallery">
+                    <div class="card__control card__control_position_left">◄</div>
+                    <img class="card__image" src="/images/mona-lisa.png" alt="Picture">
+                    <div class="card__control card__control_position_right">►</div>
                 </div>
-            </section>
-        </main>
-    </div>
+                <h3 class="card__name">Mona Lisa</h3>
+                <h4 class="card__owner">Leonardo Da Vinci</h4>
+                <p class="card__price">$100M</p>
+                <p class="card__time">21.05.2024</p>
+                <p class="card__status card__status_last">You are the last</p>
+            </div>
+        </section>
+    </main>
+</div>
 </body>
 </html>
