Implement gallery switching

--- a/main-auction-service/src/main/resources/frontend/account.html
+++ b/main-auction-service/src/main/resources/frontend/account.html
@@ -63,6 +63,7 @@
     </div>
     <script src="/js/currency.js"></script>
     <script src="/js/getUserId.js"></script>
+    <script src="/js/gallery.js"></script>
     <script src="/js/account.js"></script>
     </body>
 </html>
