--- a/main-auction-service/src/main/resources/frontend/index.html
+++ b/main-auction-service/src/main/resources/frontend/index.html
@@ -31,6 +31,7 @@
         </main>
     </div>
     <script src="/js/currency.js"></script>
+    <script src="/js/gallery.js"></script>
     <script src="/js/getAllLots.js"></script>
     <script src="/js/getUserId.js"></script>
     <script src="/js/preventDefault.js"></script>
