Add cancel buttons and refactor currency display

--- a/main-auction-service/src/main/resources/frontend/balance.html
+++ b/main-auction-service/src/main/resources/frontend/balance.html
@@ -31,21 +31,20 @@
                     <div>
                         <input class="registration-form__radio" type="radio" name="currency" value="RUB" id="rub">
                         <label class="registration-form__radio__mock" for="rub"></label>
-                        <p class="registration-form__label_inline">RUB (Российский рубль)</p>
+                        <p class="registration-form__label_inline">RUB</p>
                     </div>
                     <div>
                         <input class="registration-form__radio" type="radio" name="currency" value="EUR" id="eur">
                         <label class="registration-form__radio__mock" for="eur"></label>
-                        <p class="registration-form__label_inline">EUR (Евро)</p>
+                        <p class="registration-form__label_inline">EUR</p>
                     </div>
                     <div>
                         <input class="registration-form__radio" type="radio" name="currency" value="USD" id="usd">
                         <label class="registration-form__radio__mock" for="usd"></label>
-                        <p class="registration-form__label_inline">USD (Доллар США)</p>
+                        <p class="registration-form__label_inline">USD</p>
                     </div>
                 </div>
-                <button type="button" class="registration-form__button registration-form__button_secondary">Cancel
-                </button>
+                <button onclick="window.history.back(); return false;" type="button" class="registration-form__button registration-form__button_secondary">Cancel</button>
                 <button type="button" class="registration-form__button" id="save-button">Save</button>
 
                 <script>
