--- a/main-auction-service/src/main/resources/frontend/data.html
+++ b/main-auction-service/src/main/resources/frontend/data.html
@@ -47,7 +47,7 @@
                         <p class="registration-form__label_inline">Show password</p>
                     </div>
 
-                    <button type="button" class= "registration-form__button registration-form__button_secondary">Cancel</button>
+                    <button type="button" onclick="window.history.back(); return false;" class="registration-form__button registration-form__button_secondary">Cancel</button>
                     <button type="submit" class="registration-form__button">Save</button>
                 </form>
             </section>
