--- a/main-auction-service/src/main/resources/frontend/lot.html
+++ b/main-auction-service/src/main/resources/frontend/lot.html
@@ -38,17 +38,17 @@
                     <div>
                         <input class="registration-form__radio" type="radio" name="currency" value="RUB" id="rub">
                         <label class="registration-form__radio__mock" for="rub"></label>
-                        <p class="registration-form__label_inline">RUB (Российский рубль)</p>
+                        <p class="registration-form__label_inline">RUB</p>
                     </div>
                     <div>
                         <input class="registration-form__radio" type="radio" name="currency" value="EUR" id="eur">
                         <label class="registration-form__radio__mock" for="eur"></label>
-                        <p class="registration-form__label_inline">EUR (Евро)</p>
+                        <p class="registration-form__label_inline">EUR</p>
                     </div>
                     <div>
                         <input class="registration-form__radio" type="radio" name="currency" value="USD" id="usd">
                         <label class="registration-form__radio__mock" for="usd"></label>
-                        <p class="registration-form__label_inline">USD (Доллар США)</p>
+                        <p class="registration-form__label_inline">USD</p>
                     </div>
                 </div>
                 <button type="button" class="registration-form__button" id="make-bet" onclick="makeBet()">Make bet</button>
